Adjusting gitleaks.toml file

--- a/.github/workflows/ci-pipeline.yaml
+++ b/.github/workflows/ci-pipeline.yaml
@@ -22,15 +22,7 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
-          args: |
-            --redact
-            --exit-code=2
-            --report-format=sarif
-            --report-path=results.sarif
-            --log-level=debug
-            --log-opts=--no-merges
-            --first-parent
-            ${GITHUB_BASE_REF}..${GITHUB_SHA}
+          config-path: .github/gitleaks.toml
 
   EditorConfig:
     name: Editor Config Check
