--- a/.github/workflows/ci-pipeline.yaml
+++ b/.github/workflows/ci-pipeline.yaml
@@ -17,10 +17,16 @@ jobs:
         with:
           fetch-depth: 0
 
+      - name: List files in the repository
+        run: |
+          ls -la
+
       - name: Run Gitleaks
         uses: gitleaks/gitleaks-action@v2
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        with:
+          config-path: .gitleaks.toml
 
   EditorConfig:
     name: Editor Config Check
