--- a/.gitleaks.toml
+++ b/.gitleaks.toml
@@ -26,3 +26,22 @@ no_merges = true
 
 # Scan only the first parent of each merge commit
 first_parent = true
+
+# Custom rules to detect secrets
+[[rules]]
+    id = "MY_SECRET_KEY"
+    description = "Detect MY_SECRET_KEY"
+    regex = 'MY_SECRET_KEY=[A-Za-z0-9]+'
+    tags = ["key"]
+
+[[rules]]
+    id = "password"
+    description = "Detect password"
+    regex = 'password=[A-Za-z0-9]+'
+    tags = ["key"]
+
+[[rules]]
+    id = "API_KEY"
+    description = "Detect API_KEY"
+    regex = 'API_KEY=[A-Za-z0-9]+'
+    tags = ["key"]
