Changed path of the snyk dependency folder

--- a/.github/workflows/ci-pipeline.yaml
+++ b/.github/workflows/ci-pipeline.yaml
@@ -114,6 +114,7 @@ jobs:
             --severity-threshold=critical
             --exclude-vuln=SNYK-PYTHON-WERKZEUG-8309092
             --exclude-vuln=SNYK-PYTHON-WERKZEUG-6808933
+          working-directory: ./app/dependency
 
       - name: Run tests with coverage and generate report
         run: |
