--- a/.github/workflows/ci-pipeline.yaml
+++ b/.github/workflows/ci-pipeline.yaml
@@ -88,7 +88,7 @@ jobs:
         run: markdownlint **/*.md
 
   UnitTestSnyk:
-    name: Unit Tests and Snyk Check
+    name: Units,Snyk,SonarCloud 
     runs-on: ubuntu-latest
     needs: [EditorConfig, PylintJob, PythonBlackJob, MarkdownLintJob]
     steps:
@@ -104,7 +104,7 @@ jobs:
         run: |
           pip install -r app/dependency/requirements.txt
           pip install coverage
-  
+
       - name: Change directory to dependency folder
         run: cd app/dependency
       - name: Run Snyk to check for vulnerabilities
@@ -116,7 +116,7 @@ jobs:
             --severity-threshold=critical
             --exclude-vuln=SNYK-PYTHON-WERKZEUG-8309092
             --exclude-vuln=SNYK-PYTHON-WERKZEUG-6808933
-        
+
 
       - name: Run tests with coverage and generate report
         run: |
