--- a/.github/workflows/ci-pipeline.yaml
+++ b/.github/workflows/ci-pipeline.yaml
@@ -105,8 +105,6 @@ jobs:
           pip install -r app/dependency/requirements.txt
           pip install coverage
 
-      - name: Change directory to dependency folder
-        run: cd app/dependency
       - name: Run Snyk to check for vulnerabilities
         uses: snyk/actions/python@master
         env:
@@ -116,6 +114,7 @@ jobs:
             --severity-threshold=critical
             --exclude-vuln=SNYK-PYTHON-WERKZEUG-8309092
             --exclude-vuln=SNYK-PYTHON-WERKZEUG-6808933
+          working-directory: app/dependency
 
 
       - name: Run tests with coverage and generate report
