--- a/.github/workflows/ci-pipeline.yaml
+++ b/.github/workflows/ci-pipeline.yaml
@@ -105,6 +105,20 @@ jobs:
           pip install -r app/dependency/requirements.txt
           pip install coverage
 
+      - name: Copy requirements.txt to root so Snyk can test
+        run: cp app/dependency/requirements.txt ./requirements.txt
+
+      - name: Run Snyk to check for vulnerabilities
+        uses: snyk/actions/python@master
+        env:
+          SNYK_TOKEN: ${{ secrets.SNYK_TOKEN }}
+        with:
+          args: >
+            --severity-threshold=critical
+            --exclude-vuln=SNYK-PYTHON-WERKZEUG-8309092
+            --exclude-vuln=SNYK-PYTHON-WERKZEUG-6808933
+
+
       - name: Run Snyk to check for vulnerabilities
         uses: snyk/actions/python@master
         env:
@@ -117,7 +131,7 @@ jobs:
 
       - name: Run tests with coverage and generate report
         run: |
-          coverage run -m unittest discover -s app -p "*.py"
+          coverage run -m unittest discover -s app/unittests -p "*.py"
           coverage xml -o coverage.xml
 
       - name: List files and coverage
