--- a/.github/workflows/ci-pipeline.yaml
+++ b/.github/workflows/ci-pipeline.yaml
@@ -123,7 +123,7 @@ jobs:
           coverage run -m unittest discover -s app/unittests -p "*.py"
           coverage xml -o coverage.xml
 
-      - name: List files and coverage
+      - name: List coverage
         run: |
           cat coverage.xml
 
