--- a/.github/workflows/ci-pipeline.yaml
+++ b/.github/workflows/ci-pipeline.yaml
@@ -155,7 +155,7 @@ jobs:
         with:
           context: .
           push: false
-          tags: ${{ secrets.DOCKERHUB_USERNAME }}projecti:${{ github.sha }}
+          tags: ${{ secrets.DOCKERHUB_USERNAME }}/projecti:${{ github.sha }}
       - name: Scan with Trivy
         uses: aquasecurity/trivy-action@0.28.0
         with:
