--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,7 @@ app/__pycache__/app.cpython-38.pyc
 app/unittests/__pycache__/test_app.cpython-38.pyc
 
 
+IaCDpChck/terraform.tfstate
+IaCDpChck/.terraform/providers/registry.terraform.io/hashicorp/aws/5.82.2/windows_amd64/LICENSE.txt
+IaCDpChck/.terraform/providers/registry.terraform.io/hashicorp/aws/5.82.2/windows_amd64/terraform-provider-aws_v5.82.2_x5.exe
+IaCDpChck/.terraform.lock.hcl
