--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,4 @@ IaCDpChck/.terraform.tfstate.lock.info
 IaCDpChck/.terraform/providers/registry.terraform.io/hashicorp/aws/5.82.2/linux_amd64/terraform-provider-aws_v5.82.2_x5
 IaCDpChck/terraform.tfstate.backup
 IaCDpChck/.terraform/providers/registry.terraform.io/hashicorp/aws/5.82.2/linux_amd64/LICENSE.txt
+app/__pycache__/__init__.cpython-38.pyc
