--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,6 @@
 app/__pycache__/app.cpython-38.pyc
 app/unittests/__pycache__/test_app.cpython-38.pyc
+app/unittests/__pycache__/test_app.cpython-311.pyc
 
 
 IaCDpChck/terraform.tfstate
@@ -11,3 +12,5 @@ IaCDpChck/.terraform/providers/registry.terraform.io/hashicorp/aws/5.82.2/linux_
 IaCDpChck/terraform.tfstate.backup
 IaCDpChck/.terraform/providers/registry.terraform.io/hashicorp/aws/5.82.2/linux_amd64/LICENSE.txt
 app/__pycache__/__init__.cpython-38.pyc
+app/__pycache__/__init__.cpython-311.pyc
+
