--- a/.github/workflows/ci-pipeline.yaml
+++ b/.github/workflows/ci-pipeline.yaml
@@ -47,6 +47,10 @@ jobs:
     needs: ScanForSecrets
     steps:
       - uses: actions/checkout@v4
+      - name: Install system dependencies
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y libpq-dev
       - name: Setup Python
         uses: actions/setup-python@v5
         with:
