Changed deployment to test something

--- a/deployment/deployment.yaml
+++ b/deployment/deployment.yaml
@@ -19,3 +19,14 @@ spec:
           image: klimentchakarovski/projecti
           ports:
             - containerPort: 3000
+          env:
+            - name: DB_USERNAME
+              valueFrom:
+                secretKeyRef:
+                  name: postgres-credentials-secret
+                  key: username
+            - name: DB_PASSWORD
+              valueFrom:
+                secretKeyRef:
+                  name: postgres-credentials-secret
+                  key: password
