--- a/deployment/deployment.yaml
+++ b/deployment/deployment.yaml
@@ -25,8 +25,10 @@ spec:
                 secretKeyRef:
                   name: postgres-credentials-secret
                   key: username
+                  namespace: external-secrets
             - name: DB_PASSWORD
               valueFrom:
                 secretKeyRef:
                   name: postgres-credentials-secret
                   key: password
+                  namespace: external-secrets
