--- a/deployment/basic-external-secret.yaml
+++ b/deployment/basic-external-secret.yaml
@@ -1,16 +1,14 @@
-apiVersion: external-secrets.io/v1beta1
+apiVersion: externalsecrets.k8s.io/v1alpha1
 kind: ExternalSecret
 metadata:
-  name: example
-  namespace: external-secrets
+  name: postgres-credentials-secret
+  namespace: dev
 spec:
   secretStoreRef:
+    name: aws-secret-store
     kind: SecretStore
-    name: secretstore-sample
   target:
     name: postgres-credentials-secret
-    creationPolicy: Owner
-    deletionPolicy: Retain
   data:
     - secretKey: username
       remoteRef:
@@ -20,4 +18,3 @@ spec:
       remoteRef:
         key: postgres-credentials
         property: password
-  refreshInterval: 100h
