--- a/deployment/basic-secret-store.yaml
+++ b/deployment/basic-secret-store.yaml
@@ -1,18 +1,17 @@
-apiVersion: external-secrets.io/v1beta1
+apiVersion: externalsecrets.external-secrets.io/v1alpha1
 kind: SecretStore
 metadata:
-  name: secretstore-sample
-  namespace: external-secrets
+  name: aws-secret-store
+  namespace: dev
 spec:
   provider:
     aws:
-      service: SecretsManager
       region: us-east-1
-      auth:
-        secretRef:
-          accessKeyIDSecretRef:
-            name: awssm-secret
-            key: access-key
-          secretAccessKeySecretRef:
-            name: awssm-secret
-            key: secret-access-key
+      secretAccessKey:
+        secretKeyRef:
+          name: aws-secret
+          key: secret-access-key
+      accessKeyID:
+        secretKeyRef:
+          name: aws-secret
+          key: access-key
