--- a/deployment/deployment.yaml
+++ b/deployment/deployment.yaml
@@ -2,6 +2,7 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: projecti-deployment
+  namespace: projecti
   labels:
     app: projecti
 spec:
