--- a/deployment/deployment.yaml
+++ b/deployment/deployment.yaml
@@ -20,3 +20,14 @@ spec:
           image: klimentchakarovski/projecti
           ports:
             - containerPort: 3000
+          env:
+            - name: POSTGRES_USERNAME
+              valueFrom:
+                secretKeyRef:
+                  name: postgres-credentials
+                  key: username
+            - name: POSTGRES_PASSWORD
+              valueFrom:
+                secretKeyRef:
+                  name: postgres-credentials
+                  key: password
