--- a/.github/workflows/ci-pipeline.yaml
+++ b/.github/workflows/ci-pipeline.yaml
@@ -204,6 +204,18 @@ jobs:
         run: |
           git log -1 --pretty=%B | grep "Update kustomization.yaml" && exit 0 || echo "Proceeding..."
 
+      - name: Install Kustomize
+        run: |
+          curl -s https://raw.githubusercontent.com/kubernetes-sigs/kustomize/master/hack/install_kustomize.sh | bash
+          sudo mv kustomize /usr/local/bin/
+
+      - name: Check kustomization.yaml Exists
+        run: |
+          if [ ! -f deployment/kustomization.yaml ]; then
+            echo "Error: deployment/kustomization.yaml not found!"
+            exit 1
+          fi
+
       - name: Update Kustomize Image
         run: |
           TAG=$(git rev-parse HEAD)  # Full SHA
@@ -216,7 +228,8 @@ jobs:
           git config --global user.name 'GitHub Actions'
           git config --global user.email 'actions@github.com'
           git add deployment/kustomization.yaml
-          git commit -m "Update kustomization.yaml with new image tag $TAG"
+          git commit -m "Update kustomization.yaml with new image tag $TAG" || exit 0
+          git pull --rebase  # Avoid conflicts
           git push
 
   Notify-Completion:
