--- a/.github/workflows/ci-pipeline.yaml
+++ b/.github/workflows/ci-pipeline.yaml
@@ -23,25 +23,25 @@ jobs:
         run: |
           curl -X POST -H 'Content-type: application/json' --data '{"text":"Workflow has started"}' $SLACK_WEBHOOK_URL
 
-  ScanForSecrets:
-    name: GitLeaks check for secrets
-    runs-on: ubuntu-latest
-    needs: Notify-Start
-    steps:
-      - uses: actions/checkout@v4
-        with:
-          fetch-depth: 0
+ # ScanForSecrets:
+ #   name: GitLeaks check for secrets
+ #   runs-on: ubuntu-latest
+ #   needs: Notify-Start
+ #  steps:
+ #     - uses: actions/checkout@v4
+ #       with:
+ #         fetch-depth: 0
 
-      - name: List files in the repository
-        run: |
-          ls -la
-
-      - name: Run Gitleaks
-        uses: gitleaks/gitleaks-action@v2
-        with:
-          config: .gitleaks.toml
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+  #    - name: List files in the repository
+  #      run: |
+  #        ls -la
+#
+##      - name: Run Gitleaks
+ #       uses: gitleaks/gitleaks-action@v2
+ #       with:
+ #         config: .gitleaks.toml
+ #       env:
+ #         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
   EditorConfig:
     name: Editor Config Check
